# ioq3

./: .gitignore  CMakeLists.txt  astyle-code.bat  vcpkg.json
CMakeModules/: CPUDefine.cmake
CMakeProjects/: CGame.cmake  Game.cmake  Q3UI.cmake  Quake3.cmake  refGL1.cmake  refGL2.cmake
app/baseq3/scripts/: user0.proj
code/AL/: al.h  alc.h  alext.h  efx-presets.h  efx.h
code/autoupdater/: autoupdater.c
code/autoupdater/rsa_tools/: rsa_common.c  rsa_common.h  rsa_make_keys.c  rsa_sign.c  rsa_verify.c
code/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_ea.h  be_interface.c  (+16 more)
code/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newdraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.c  cg_view.c  cg_weapons.c
code/client/: cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keycodes.h  keys.h  libmumblelink.c  qal.c  qal.h  snd_adpcm.c  snd_altivec.c  snd_codec.c  snd_codec.h  snd_codec_ogg.c  snd_codec_opus.c  snd_codec_wav.c  snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c  snd_openal.c  snd_public.h  snd_wavelet.c
code/game/: ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_public.h  g_rankings.c  g_rankings.h  g_session.c  g_spawn.c  g_svcmds.c  (+8 more)
code/null/: mac_net.c  null_client.c  null_glimp.c  null_input.c  null_main.c  null_net.c  null_snddma.c
code/q3_ui/: ui_addbots.c  ui_atoms.c  ui_cdkey.c  ui_cinematics.c  ui_confirm.c  ui_connect.c  ui_controls2.c  ui_credits.c  ui_demo2.c  ui_display.c  ui_gameinfo.c  ui_ingame.c  ui_loadconfig.c  ui_local.h  ui_login.c  ui_main.c  ui_menu.c  ui_mfield.c  ui_mods.c  ui_network.c  ui_options.c  ui_playermodel.c  ui_players.c  ui_playersettings.c  ui_preferences.c  ui_qmenu.c  ui_rankings.c  ui_rankstatus.c  ui_removebots.c  ui_saveconfig.c  ui_serverinfo.c  ui_servers2.c  ui_setup.c  ui_signup.c  ui_sound.c  ui_sparena.c  ui_specifyleague.c  ui_specifyserver.c  ui_splevel.c  ui_sppostgame.c  (+6 more)
code/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  ioapi.c  ioapi.h  json.h  md4.c  md5.c  msg.c  net_chan.c  net_ip.c  puff.c  puff.h  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  unzip.c  unzip.h  vm.c  vm_armv7l.c  vm_interpreted.c  vm_local.h  vm_none.c  vm_powerpc.c  vm_powerpc_asm.c  vm_powerpc_asm.h  (+2 more)
code/renderercommon/: iqm.h  qgl.h  tr_common.h  tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
code/renderergl1/: tr_altivec.c  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_subs.c  tr_surface.c  tr_world.c
code/renderergl2/: tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_extramath.h  tr_extratypes.h  tr_fbo.c  tr_fbo.h  tr_flares.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_postprocess.c  tr_postprocess.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_snd.c
code/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_rankings.c  sv_snapshot.c  sv_world.c
code/sys/: con_log.c  con_passive.c  con_tty.c  con_win32.c  sys_autoupdater.c  sys_loadlib.h  sys_local.h  sys_main.c  sys_unix.c  sys_win32.c  win_resource.h
code/ui/: ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
misc/msvc/resource/: resource.h  win_resource.rc
misc/osxfe/ioquake3fe/: Controller.h  ErrorWindow.h  ErrorWindowController.h
ui/: menudef.h
